--- a/substrate/bin/node/runtime/Cargo.toml
+++ b/substrate/bin/node/runtime/Cargo.toml
@@ -41,6 +41,10 @@ node-primitives = { workspace = true }
 pallet-example-mbm = { workspace = true }
 pallet-example-tasks = { workspace = true }
 
+# local
+smt-primitives = {workspace = true,  default-features = false}
+pallet-smt = { workspace = true, default-features = false}
+
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
 
@@ -48,6 +52,8 @@ substrate-wasm-builder = { optional = true, workspace = true, default-features =
 default = ["std"]
 with-tracing = ["polkadot-sdk/with-tracing"]
 std = [
+	"smt-primitives/std",
+	"pallet-smt/std",
 	"codec/std",
 	"log/std",
 	"node-primitives/std",
