--- a/Cargo.toml
+++ b/Cargo.toml
@@ -160,51 +160,51 @@ members = [
 	"polkadot/core-primitives",
 	"polkadot/erasure-coding",
 	"polkadot/erasure-coding/fuzzer",
-	"polkadot/node/collation-generation",
-	"polkadot/node/core/approval-voting",
-	"polkadot/node/core/approval-voting-parallel",
-	"polkadot/node/core/av-store",
-	"polkadot/node/core/backing",
-	"polkadot/node/core/bitfield-signing",
-	"polkadot/node/core/candidate-validation",
-	"polkadot/node/core/chain-api",
-	"polkadot/node/core/chain-selection",
-	"polkadot/node/core/dispute-coordinator",
-	"polkadot/node/core/parachains-inherent",
-	"polkadot/node/core/prospective-parachains",
-	"polkadot/node/core/provisioner",
-	"polkadot/node/core/pvf",
-	"polkadot/node/core/pvf-checker",
-	"polkadot/node/core/pvf/common",
-	"polkadot/node/core/pvf/execute-worker",
-	"polkadot/node/core/pvf/prepare-worker",
-	"polkadot/node/core/runtime-api",
-	"polkadot/node/gum",
-	"polkadot/node/gum/proc-macro",
-	"polkadot/node/malus",
-	"polkadot/node/metrics",
-	"polkadot/node/network/approval-distribution",
-	"polkadot/node/network/availability-distribution",
-	"polkadot/node/network/availability-recovery",
-	"polkadot/node/network/bitfield-distribution",
-	"polkadot/node/network/bridge",
-	"polkadot/node/network/collator-protocol",
-	"polkadot/node/network/dispute-distribution",
-	"polkadot/node/network/gossip-support",
-	"polkadot/node/network/protocol",
-	"polkadot/node/network/statement-distribution",
-	"polkadot/node/overseer",
-	"polkadot/node/primitives",
-	"polkadot/node/service",
-	"polkadot/node/subsystem",
-	"polkadot/node/subsystem-bench",
-	"polkadot/node/subsystem-test-helpers",
-	"polkadot/node/subsystem-types",
-	"polkadot/node/subsystem-util",
-	"polkadot/node/test/client",
-	"polkadot/node/test/service",
-	"polkadot/node/tracking-allocator",
-	"polkadot/node/zombienet-backchannel",
+	# "polkadot/node/collation-generation",
+	# "polkadot/node/core/approval-voting",
+	# "polkadot/node/core/approval-voting-parallel",
+	# "polkadot/node/core/av-store",
+	# "polkadot/node/core/backing",
+	# "polkadot/node/core/bitfield-signing",
+	# "polkadot/node/core/candidate-validation",
+	# "polkadot/node/core/chain-api",
+	# "polkadot/node/core/chain-selection",
+	# "polkadot/node/core/dispute-coordinator",
+	# "polkadot/node/core/parachains-inherent",
+	# "polkadot/node/core/prospective-parachains",
+	# "polkadot/node/core/provisioner",
+	# "polkadot/node/core/pvf",
+	# "polkadot/node/core/pvf-checker",
+	# "polkadot/node/core/pvf/common",
+	# "polkadot/node/core/pvf/execute-worker",
+	# "polkadot/node/core/pvf/prepare-worker",
+	# "polkadot/node/core/runtime-api",
+	# "polkadot/node/gum",
+	# "polkadot/node/gum/proc-macro",
+	# "polkadot/node/malus",
+	# "polkadot/node/metrics",
+	# "polkadot/node/network/approval-distribution",
+	# "polkadot/node/network/availability-distribution",
+	# "polkadot/node/network/availability-recovery",
+	# "polkadot/node/network/bitfield-distribution",
+	# "polkadot/node/network/bridge",
+	# "polkadot/node/network/collator-protocol",
+	# "polkadot/node/network/dispute-distribution",
+	# "polkadot/node/network/gossip-support",
+	# "polkadot/node/network/protocol",
+	# "polkadot/node/network/statement-distribution",
+	# "polkadot/node/overseer",
+	# "polkadot/node/primitives",
+	# "polkadot/node/service",
+	# "polkadot/node/subsystem",
+	# "polkadot/node/subsystem-bench",
+	# "polkadot/node/subsystem-test-helpers",
+	# "polkadot/node/subsystem-types",
+	# "polkadot/node/subsystem-util",
+	# "polkadot/node/test/client",
+	# "polkadot/node/test/service",
+	# "polkadot/node/tracking-allocator",
+	# "polkadot/node/zombienet-backchannel",
 	"polkadot/parachain",
 	"polkadot/parachain/test-parachains",
 	"polkadot/parachain/test-parachains/adder",
@@ -536,17 +536,17 @@ members = [
 	"substrate/utils/prometheus",
 	"substrate/utils/substrate-bip39",
 	"substrate/utils/wasm-builder",
-	"templates/minimal/node",
-	"templates/minimal/pallets/template",
-	"templates/minimal/runtime",
-	"templates/parachain/node",
-	"templates/parachain/pallets/template",
-	"templates/parachain/runtime",
-	"templates/solochain/node",
-	"templates/solochain/pallets/template",
-	"templates/solochain/runtime",
-	"templates/zombienet",
-	"umbrella",
+	# "templates/minimal/node",
+	# "templates/minimal/pallets/template",
+	# "templates/minimal/runtime",
+	# "templates/parachain/node",
+	# "templates/parachain/pallets/template",
+	# "templates/parachain/runtime",
+	# "templates/solochain/node",
+	# "templates/solochain/pallets/template",
+	# "templates/solochain/runtime",
+	# "templates/zombienet",
+	# "umbrella",
 ]
 
 default-members = [
